2001-04-11  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/average-balance.scm, category-barchart.scm,
	income-expense-graph.scm, net-worth-timeseries.scm, portfolio.scm:
	Added menu-path for reports.

	* src/scm/report/account-piecharts.scm: Report title is now
	fetched from Reportname option. Slices and legend now have
	different URLs.

2001-04-11  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-commodities.c: more work

	* src/engine/gnc-commodity.c (gnc_commodity_table_remove): new func

	* src/engine/gnc-commodity.h: add ASX namespace

	* src/gnome/dialog-commodity.c (gnc_ui_edit_commodity_modal): new
	func. unfinished. rename some functions to reflect that it's also
	an editing dialog now.

2001-04-11  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm (render-month-subheading):
	fix bug.

2001-04-11  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/account-piecharts.scm: Simplified anchors for
	other reports by using gnc:make-report-anchor.

	* src/scm/html-utilities.scm (gnc:make-report-anchor): New
	function.

	* src/scm/options.scm (gnc:options-copy-values): New function.
	
	* src/scm/report/account-piecharts.scm: Added anchors to yet other
	reports on the slices of the pie. Simplified creation of other
	report's options.

	* src/scm/report/category-barchart.scm: Simplified creation of
	other report's options.

	* src/scm/report/report-list.scm: Renamed file.
	
	* src/scm/report/account-piecharts.scm: Renamed to this filename
	(used to be: income-or-expense-pie.scm). Introduced some more
	generality such that this file also has an asset and a liability
	balance piechart.

	* src/scm/report/category-barchart.scm: Introduced some
	more generality such that this file also has a asset and liability
	balance barchart.

2001-04-10  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report-utilities.scm: Added function
	(gnc:account-get-type-string-plural). Changed